# vklib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  shaders.ps1  shaders.sh
.github/workflow/: build.yml
.github/workflows/: build.yml
sample/: CMakeLists.txt  camera.hpp  main.c  main.cpp  vertex.hpp
sample/assets/: buffered.vert  textured.frag
vklib/: CMakeLists.txt
vklib/inc/vklib/: set.h  vk.h  vkbuffer.h  vkcmd.h  vkdev.h  vkdisplay.h  vkframebuffer.h  vkindexbuffer.h  vkpipeline.h  vkrenderer.h  vkrendertarget.h  vktexture.h  vkuniform.h  vkutil.h  vkvertexbuffer.h
vklib/vklib/: set.c  vk.c  vk.h  vkbuffer.c  vkcmd.c  vkdev.c  vkdisplay.c  vkframebuffer.c  vkindexbuffer.c  vkpipeline.c  vkrenderer.c  vkrendertarget.c  vktexture.c  vkuniform.c  vkutil.c  vkutil.h  vkvertexbuffer.c
